force-app/main/default/objects/Account/fields/ABMLinkedInMessages__c.field-meta.xml
<CustomField>
    <fullName>ABMLinkedInMessages__c</fullName>
    <label>ABMLinkedInMessages</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>