force-app/main/default/objects/Account/fields/ABMMeetings__c.field-meta.xml
<CustomField>
    <fullName>ABMMeetings__c</fullName>
    <label>ABMMeetings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>