force-app/main/default/objects/Account/fields/ABMTouches__c.field-meta.xml
<CustomField>
    <fullName>ABMTouches__c</fullName>
    <formula>ABMTouchesLead__c + ABMTouchesContact__c+ABMMeetings__c+ ABMLinkedInMessages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABMTouches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>