force-app/main/default/objects/Account/fields/ABMTouchesContact__c.field-meta.xml
<CustomField>
    <fullName>ABMTouchesContact__c</fullName>
    <label>ABMTouchesContact</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>