force-app/main/default/objects/Account/fields/ABMTouchesLead__c.field-meta.xml
<CustomField>
    <fullName>ABMTouchesLead__c</fullName>
    <label>ABMTouchesLead</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>