force-app/main/default/objects/Account/fields/ABX_Initial_Stage__c.field-meta.xml
<CustomField>
    <fullName>ABX_Initial_Stage__c</fullName>
    <label>ABX Initial Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ABX_Funnel_Stages</valueSetName>
    </valueSet>
</CustomField>