force-app/main/default/objects/Account/fields/ABX_RelatedWonOpps__c.field-meta.xml
<CustomField>
    <fullName>ABX_RelatedWonOpps__c</fullName>
    <label>ABX_RelatedWonOpps</label>
    <summaryFilterItems>
        <field>Opportunity.IsWonABX__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New,Expand</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Expansion_Subtype__c</field>
        <operation>notEqual</operation>
        <value>Contractually Agreed</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>