force-app/main/default/objects/Account/fields/ABX_Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>ABX_Stage_Formula__c</fullName>
    <formula>IF(ISNULL(BecameABMAccount__c),&quot;&quot;,IF( OR(if( LastFormFillRollUpContact__c &gt;LastFormFillRollupLead__c, DATEVALUE(LastFormFillRollUpContact__c),DATEVALUE(LastFormFillRollupLead__c))
&gt; DATEVALUE(BecameABMAccount__c), ( Salesloft_Contact_Successes__c + Salesloft_Lead_Successes__c ) &gt; 0),&quot;2 - Aware&quot;,&quot;1 - Targeted&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABX Stage (Formula)</label>
    <type>Text</type>
</CustomField>