force-app/main/default/objects/Account/fields/Account_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Fit_Score__c</fullName>
    <description>This field stores the fit score of the account hierarchy, which is equivalent to the fitscore of the ultimate parent account. Gainsight manages this field.</description>
    <label>Account Fit Score</label>
    <type>TextArea</type>
</CustomField>