force-app/main/default/objects/Account/fields/Account_QualificationEventsLast120Days__c.field-meta.xml
<CustomField>
    <fullName>Account_QualificationEventsLast120Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Events rollup</description>
    <label>Account.QualificationEventsLast120Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>