force-app/main/default/objects/Account/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <description>The field specifies whether the Account belongs to the corporate or enterprise segment.</description>
    <formula>IF(ISPICKVAL(EmployeesRange__c , &quot;10.000+&quot;)|| ISPICKVAL(EmployeesRange__c , &quot;5001-10.000&quot;), &quot;Enterprise&quot;, &quot;Corporate&quot;)</formula>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>