force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>CASE(RecordType.Name,
&quot;Partner Account&quot;,&quot;Partner&quot;,
&quot;Parent Account&quot;,&quot;Parent&quot;,
&quot;Business Account&quot;,&quot;Business&quot;
,&quot;Business&quot;)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>