force-app/main/default/objects/Account/fields/AccountQualificationCallsLast120Days__c.field-meta.xml
<CustomField>
    <fullName>AccountQualificationCallsLast120Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Qualification Calls in the last 120 days</description>
    <inlineHelpText>Qualification Calls in the last 120 days</inlineHelpText>
    <label>Account.QualificationTasksLast120Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>