force-app/main/default/objects/Account/fields/Active_Pipeline_Score__c.field-meta.xml
<CustomField>
    <fullName>Active_Pipeline_Score__c</fullName>
    <description>This field stores the score assigned to the account based on Total Account Open Pipeline. It is utilized for customer segmentation assignment purposes.</description>
    <formula>if(
    Total_Account_Open_Pipeline_EUR__c = 0, 0,
    if(
        Total_Account_Open_Pipeline_EUR__c &gt;= 200000, 20,
        if(
             Total_Account_Open_Pipeline_EUR__c &gt;= 170000, 18,
            if(
                Total_Account_Open_Pipeline_EUR__c &gt;= 100000, 16,
                if(
                    Total_Account_Open_Pipeline_EUR__c &gt;= 65000, 15,
                    if(
                        Total_Account_Open_Pipeline_EUR__c &gt;= 10000, 10,
                        5
                    )   
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Pipeline (Score)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>