force-app/main/default/objects/Account/fields/Add_To_Productboard__c.field-meta.xml
<CustomField>
    <fullName>Add_To_Productboard__c</fullName>
    <description>Determines if the account record should be added to the ProductBoard integration. If any of the following conditions if met:

The Account has any related Open New or Expand Opportunities

OR 

There is any active Camunda 7 or Camunda 8 Renewals 

OR

The account has Partner Account record type and relationship status is active</description>
    <formula>OpenOpportunities__c &gt; 0

||

OR(Total_Camunda_7_Renewals__c &gt; 0,  Total_Camunda_8_Renewals__c &gt; 0,  ARR__c &gt; 0)

||

AND(RecordType.DeveloperName = &apos;Partner_Account&apos;,  ISPICKVAL(RelationshipStatus__c, &apos;Active&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add To Productboard</label>
    <type>Checkbox</type>
</CustomField>