force-app/main/default/objects/Account/fields/ADR_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>ADR_Owner_Full_Name__c</fullName>
    <description>For use in SalesLoft</description>
    <formula>SDROwner__r.FirstName &amp;&quot; &quot;&amp; SDROwner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADR Owner Full Name</label>
    <type>Text</type>
</CustomField>