force-app/main/default/objects/Account/fields/AE_Target__c.field-meta.xml
<CustomField>
    <fullName>AE_Target__c</fullName>
    <description>Searches Target field for AE</description>
    <formula>includes( Target__c ,&quot;Target&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Not in Use) AE Target</label>
    <type>Checkbox</type>
</CustomField>