force-app/main/default/objects/Account/fields/Allbound_ID__c.field-meta.xml
<CustomField>
    <fullName>Allbound_ID__c</fullName>
    <description>Part of the connector with Allbound Partner Portal</description>
    <inlineHelpText>Part of the connector with Allbound Partner Portal</inlineHelpText>
    <label>Allbound ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>