force-app/main/default/objects/Account/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <inlineHelpText>Select the right approval status from the dropdown</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Applied</fullName>
                <isActive>false</isActive>
                <label>Applied</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>ApprovedViaContract</fullName>
                <isActive>false</isActive>
                <label>Approved via Contract</label>
            </value>
            <value>
                <fullName>ApprovedViaWebsiteOnly</fullName>
                <isActive>false</isActive>
                <label>Approved via Website only</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <isActive>false</isActive>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>