force-app/main/default/objects/Account/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>ARR of All Active Subscriptions/Renewal Opportunities. This is updated every 4 hours automatically.</inlineHelpText>
    <label>This Account ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>