force-app/main/default/objects/Account/fields/ARR_Growth_goal__c.field-meta.xml
<CustomField>
    <fullName>ARR_Growth_goal__c</fullName>
    <description>used for account planning.</description>
    <inlineHelpText>There is an ARR growth goal from sales that is in line with account potential (fit score):

ARR in 12 months
ARR in 24 months</inlineHelpText>
    <label>ARR Growth goal</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>