force-app/main/default/objects/Account/fields/Became_Professional_Customer_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Became_Professional_Customer_DateTime__c</fullName>
    <description>Timestamp on when a customer became a Professional/Starter Plan Customer
REV-5823 - Populated on lead conversion</description>
    <label>Became Professional/Starter Customer DT</label>
    <type>DateTime</type>
</CustomField>