force-app/main/default/objects/Account/fields/BecameABMAccount__c.field-meta.xml
<CustomField>
    <fullName>BecameABMAccount__c</fullName>
    <label>BecameABMAccount</label>
    <type>DateTime</type>
</CustomField>