force-app/main/default/objects/Account/fields/BecamePartnerNegotiating__c.field-meta.xml
<CustomField>
    <fullName>BecamePartnerNegotiating__c</fullName>
    <label>BecamePartnerNegotiating</label>
    <type>Date</type>
</CustomField>