force-app/main/default/objects/Account/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>Billing Address formula field used to display address in external systems in a friendly text format</description>
    <formula>BillingStreet &amp; &quot;, &quot; &amp;
BillingCity &amp; &quot;, &quot; &amp;
BillingState &amp; &quot; &quot; &amp;
BillingPostalCode &amp; &quot;, &quot; &amp;
BillingCountry</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>