force-app/main/default/objects/Account/fields/Billing_Country_Standardized__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Standardized__c</fullName>
    <formula>LOWER(BillingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country (Standardized)</label>
    <type>Text</type>
</CustomField>