force-app/main/default/objects/Account/fields/BPM_Automation_Roles__c.field-meta.xml
<CustomField>
    <fullName>BPM_Automation_Roles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BPM/Automation Roles</label>
    <type>Checkbox</type>
</CustomField>