force-app/main/default/objects/Account/fields/BPM_Product__c.field-meta.xml
<CustomField>
    <fullName>BPM_Product__c</fullName>
    <description>All BPM products identified by HG Insights</description>
    <inlineHelpText>BPM Product identified by HG</inlineHelpText>
    <label>HG BPM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alfresco</fullName>
            </value>
            <value>
                <fullName>Apache Airavata</fullName>
            </value>
            <value>
                <fullName>Apache Airflow</fullName>
            </value>
            <value>
                <fullName>Appian</fullName>
            </value>
            <value>
                <fullName>ARIS Architect &amp; ARIS Designer</fullName>
            </value>
            <value>
                <fullName>ARIS Cloud</fullName>
            </value>
            <value>
                <fullName>ARIS Connect</fullName>
            </value>
            <value>
                <fullName>ARIS Enterprise Architecture</fullName>
            </value>
            <value>
                <fullName>ARIS Process Governance</fullName>
            </value>
            <value>
                <fullName>ARIS Simulation</fullName>
            </value>
            <value>
                <fullName>Aurea Monitor</fullName>
            </value>
            <value>
                <fullName>Aurea Process</fullName>
            </value>
            <value>
                <fullName>Automation Anywhere</fullName>
            </value>
            <value>
                <fullName>Automic Automation</fullName>
            </value>
            <value>
                <fullName>Avolution</fullName>
            </value>
            <value>
                <fullName>AWD</fullName>
            </value>
            <value>
                <fullName>AWS Step Functions</fullName>
            </value>
            <value>
                <fullName>Axway Sentinel</fullName>
            </value>
            <value>
                <fullName>Bizagi</fullName>
            </value>
            <value>
                <fullName>BizFlow</fullName>
            </value>
            <value>
                <fullName>BiZZdesign</fullName>
            </value>
            <value>
                <fullName>BlueKanGo</fullName>
            </value>
            <value>
                <fullName>Blueprint (Unspecified product)</fullName>
            </value>
            <value>
                <fullName>Blue Prism</fullName>
            </value>
            <value>
                <fullName>Blue Prism Cloud</fullName>
            </value>
            <value>
                <fullName>Bonita BPM</fullName>
            </value>
            <value>
                <fullName>BP Logix</fullName>
            </value>
            <value>
                <fullName>Bradford Networks</fullName>
            </value>
            <value>
                <fullName>Camunda</fullName>
            </value>
            <value>
                <fullName>Casewise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>