force-app/main/default/objects/Account/fields/C8_Org_Ids__c.field-meta.xml
<CustomField>
    <fullName>C8_Org_Ids__c</fullName>
    <description>List or C8 org ids, populated via the data warehouse</description>
    <inlineHelpText>List or C8 org ids</inlineHelpText>
    <label>C8 Org Ids</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>