force-app/main/default/objects/Account/fields/CA_Completed_Courses__c.field-meta.xml
<CustomField>
    <fullName>CA_Completed_Courses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CA Completed Courses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>