force-app/main/default/objects/Account/fields/CA_Student_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>CA_Student_Enrollments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CA Student Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>