force-app/main/default/objects/Account/fields/cam_email__c.field-meta.xml
<CustomField>
    <fullName>cam_email__c</fullName>
    <formula>IF(RecordType.Name = &quot;Partner Account&quot;,Owner.Email,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allbound - Account Owner Email</label>
    <type>Text</type>
</CustomField>