force-app/main/default/objects/Account/fields/Camunda_8_Open_Ops__c.field-meta.xml
<CustomField>
    <fullName>Camunda_8_Open_Ops__c</fullName>
    <label>Total Camunda 8 Open Ops</label>
    <summaryFilterItems>
        <field>Opportunity.Zeebe_Could_Deal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New, Expand</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>To Be Qualified, Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>