force-app/main/default/objects/Account/fields/Camunda_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Camunda_Adoption__c</fullName>
    <description>Account planning field.</description>
    <inlineHelpText>There is strong adoption on either CE, Prof Plan or Enterprise. We are connected to at least one champion who is able and willing to tell a Camunda related Success Story.</inlineHelpText>
    <label>Camunda Adoption</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>