force-app/main/default/objects/Account/fields/Certified_Employees__c.field-meta.xml
<CustomField>
    <fullName>Certified_Employees__c</fullName>
    <description># of certifications for partner accounts. Populated via Apex Rollup.</description>
    <label># of Certifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>