force-app/main/default/objects/Account/fields/Churn_Comments__c.field-meta.xml
<CustomField>
    <fullName>Churn_Comments__c</fullName>
    <label>Churn Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>