force-app/main/default/objects/Account/fields/ChurnReasons__c.field-meta.xml
<CustomField>
    <fullName>ChurnReasons__c</fullName>
    <label>Churn Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downgraded to CE version</fullName>
            </value>
            <value>
                <fullName>Merger/Acquisition</fullName>
            </value>
            <value>
                <fullName>Customer in financial distress</fullName>
            </value>
            <value>
                <fullName>Canceled due to nonpayment</fullName>
            </value>
            <value>
                <fullName>Projects Canceled/Delayed</fullName>
            </value>
            <value>
                <fullName>Customer canceled due to COVID-19</fullName>
            </value>
            <value>
                <fullName>Replaced by Competitor</fullName>
            </value>
            <value>
                <fullName>Contract Migrated</fullName>
            </value>
            <value>
                <fullName>Supported Evaluation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>