force-app/main/default/objects/Account/fields/Clearbit_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Annual_Revenue__c</fullName>
    <description>Annual Revenue provided by Clearbit</description>
    <label>Clearbit Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>