force-app/main/default/objects/Account/fields/Clearbit_City__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_City__c</fullName>
    <description>City provided by Clearbit</description>
    <label>Clearbit City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>