force-app/main/default/objects/Account/fields/Clearbit_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Company_Name__c</fullName>
    <description>Company Name Provided by Clearbit</description>
    <label>Clearbit Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>