force-app/main/default/objects/Account/fields/Clearbit_Country__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Country__c</fullName>
    <description>Country provided by clearbit</description>
    <label>Clearbit Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>