force-app/main/default/objects/Account/fields/Clearbit_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Country_Code__c</fullName>
    <description>Country Code Provided By Clearbit</description>
    <label>Clearbit Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>ZA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>