force-app/main/default/objects/Account/fields/Clearbit_Domain__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Domain__c</fullName>
    <description>Domain provided by Clearbit</description>
    <label>Clearbit Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>