force-app/main/default/objects/Account/fields/Clearbit_Employees__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Employees__c</fullName>
    <description>Number of Employees provided by Clearbit</description>
    <label>Clearbit Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>