force-app/main/default/objects/Account/fields/Clearbit_Industry__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Industry__c</fullName>
    <description>Industry provided by clearbit</description>
    <label>Clearbit Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Diversified Financial Services</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Health Care Equipment &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Health Care Providers &amp; Services</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Life Sciences Tools &amp; Services</fullName>
            </value>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Air Freight &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Marine</fullName>
            </value>
            <value>
                <fullName>Road &amp; Rail</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Industrial Conglomerates</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Communications Equipment</fullName>
            </value>
            <value>
                <fullName>Electronic Equipment, Instruments &amp; Components</fullName>
            </value>
            <value>
                <fullName>Technology Hardware, Storage &amp; Peripherals</fullName>
            </value>
            <value>
                <fullName>Building Materials</fullName>
            </value>
            <value>
                <fullName>Containers &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Paper &amp; Forest Products</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>