force-app/main/default/objects/Account/fields/Clearbit_Location__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Location__c</fullName>
    <description>Location provided by clearbit</description>
    <label>Clearbit Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>