force-app/main/default/objects/Account/fields/Clearbit_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Modified_Time__c</fullName>
    <description>Timestamp set any time Clearbit processes a record.</description>
    <label>Clearbit Modified Time</label>
    <type>DateTime</type>
</CustomField>