force-app/main/default/objects/Account/fields/Clearbit_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Postal_Code__c</fullName>
    <description>Portal Code provided by Clearbit</description>
    <label>Clearbit Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>