force-app/main/default/objects/Account/fields/Clearbit_State__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_State__c</fullName>
    <description>State provided by Clearbit</description>
    <label>Clearbit State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>