force-app/main/default/objects/Account/fields/Clearbit_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_State_Code__c</fullName>
    <description>State Code provided by clearbit</description>
    <label>Clearbit State Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>