force-app/main/default/objects/Account/fields/Clearbit_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Street_Name__c</fullName>
    <description>Street Name provided by Clearbit</description>
    <label>Clearbit Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>