force-app/main/default/objects/Account/fields/Clearbit_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Street_Number__c</fullName>
    <description>Street Number provided by Clearbit</description>
    <label>Clearbit Street Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>