force-app/main/default/objects/Account/fields/Clearbit_Tech_Category__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Tech_Category__c</fullName>
    <description>Tech Category Provided by Clearbit</description>
    <label>Clearbit Tech Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>account_based_marketing</fullName>
            </value>
            <value>
                <fullName>accounting_and_finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>