force-app/main/default/objects/Account/fields/Clearbit_Tech_Tags__c.field-meta.xml
<CustomField>
    <fullName>Clearbit_Tech_Tags__c</fullName>
    <description>Tech tags provided by clearbit</description>
    <label>Clearbit Tech Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>