force-app/main/default/objects/Account/fields/Closed_Won_Expansions_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Expansions_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to track the total amount of closed won opportunities associated with an account</description>
    <label>Closed Won Expansions (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>