force-app/main/default/objects/Account/fields/Closed_Won_Expansions_L12Months_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Expansions_L12Months_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total amount of closed won expansions in last 24 months</description>
    <label>Closed Won Expansions L24Months (Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>