force-app/main/default/objects/Account/fields/CLUltimateActivityDate__c.field-meta.xml
<CustomField>
    <fullName>CLUltimateActivityDate__c</fullName>
    <description>Ultimate Activity Date of Contact or Lead associated to account</description>
    <formula>if( Contact_UltimateActivityDate__c &gt; Lead_UltimateActivityDate__c , Contact_UltimateActivityDate__c, Lead_UltimateActivityDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLUltimateActivityDate</label>
    <type>Date</type>
</CustomField>