force-app/main/default/objects/Account/fields/CoE_Implemented__c.field-meta.xml
<CustomField>
    <fullName>CoE_Implemented__c</fullName>
    <label>CoE Implemented</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>No - open to the idea</fullName>
            </value>
            <value>
                <fullName>No - not planned or planning</fullName>
            </value>
            <value>
                <fullName>Dont know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>