force-app/main/default/objects/Account/fields/CoE_other_information__c.field-meta.xml
<CustomField>
    <fullName>CoE_other_information__c</fullName>
    <label>CoE - other information</label>
    <type>TextArea</type>
</CustomField>